perf(kernel): evaluateAllCandidates 减分配(免 List.copyOf 拷贝 + 免 stream)
局部 hitDecisions/allTraces 出方法即无其它引用,改 Collections.unmodifiableList
不可变视图免去数组拷贝(allTraces 高候选数下是热点);finalDecision 改 Collections.max
免 stream 管道分配。行为等价,kernel+eval-svc 全量绿。这是 backlog #3 的(a)减分配部分。